package modelo.elementos;

public interface DispositivoDeAzar {
    public abstract ValorAzar lanzar();
}
